<resources>
    <string name="app_name">Thresh Lantern</string>
    <string name="action_settings">Settings</string>
    <string name="banner_ad_unit_id">ca-app-pub-6311459401782434/2874079546</string>
    <string name="Skin1">Classic</string>
    <string name="Skin2">Blood Moon</string>
    <string name="Skin3">Championship</string>
    <string name="Skin4">Deep Terror</string>
    <string name="Skin5">SSW</string>
    <string name="Skin6">Dark Star</string>
</resources>
